feat: switch tab and render card category

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -65,86 +65,86 @@
     </section>
     <section class="preview">
         <div class="preview__grid">
-            <div class="card">
-                <div class="card__photo">
-                    <img src="assets/menu/coffee-1.png" alt="coffee preview">
-                </div>
-                <div class="card__description">
-                    <h3>Irish coffee</h3>
-                    <p>Fragrant black coffee with Jameson Irish whiskey and whipped milk</p>
-                    <h3>&#36;7.00</h3>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__photo">
-                    <img src="assets/menu/coffee-2.png" alt="coffee preview">
-                </div>
-                <div class="card__description">
-                    <h3>Kahlua coffee</h3>
-                    <p>Classic coffee with milk and Kahlua liqueur under a cap of frothed milk</p>
-                    <h3>&#36;7.00</h3>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__photo">
-                    <img src="assets/menu/coffee-3.png" alt="coffee preview">
-                </div>
-                <div class="card__description">
-                    <h3>Honey raf</h3>
-                    <p>Espresso with frothed milk, cream and aromatic honey</p>
-                    <h3>&#36;5.50</h3>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__photo">
-                    <img src="assets/menu/coffee-4.png" alt="coffee preview">
-                </div>
-                <div class="card__description">
-                    <h3>Ice cappuccino</h3>
-                    <p>Cappuccino with soft thick foam in summer version with ice</p>
-                    <h3>&#36;5.00</h3>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__photo">
-                    <img src="assets/menu/coffee-5.png" alt="coffee preview">
-                </div>
-                <div class="card__description">
-                    <h3>Espresso</h3>
-                    <p>Classic black coffee</p>
-                    <h3>&#36;4.50</h3>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__photo">
-                    <img src="assets/menu/coffee-6.png" alt="coffee preview">
-                </div>
-                <div class="card__description">
-                    <h3>Latte</h3>
-                    <p>Espresso coffee with the addition of steamed milk and dense milk foam</p>
-                    <h3>&#36;5.50</h3>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__photo">
-                    <img src="assets/menu/coffee-7.png" alt="coffee preview">
-                </div>
-                <div class="card__description">
-                    <h3>Latte macchiato</h3>
-                    <p>Espresso with frothed milk and chocolate</p>
-                    <h3>&#36;5.50</h3>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__photo">
-                    <img src="assets/menu/coffee-8.png" alt="coffee preview">
-                </div>
-                <div class="card__description">
-                    <h3>Coffee with cognac</h3>
-                    <p>Fragrant black coffee with cognac and whipped cream</p>
-                    <h3>&#36;6.50</h3>
-                </div>
-            </div>
+<!--            <div class="card">-->
+<!--                <div class="card__photo">-->
+<!--                    <img src="assets/menu/coffee-1.png" alt="coffee preview">-->
+<!--                </div>-->
+<!--                <div class="card__description">-->
+<!--                    <h3>Irish coffee</h3>-->
+<!--                    <p>Fragrant black coffee with Jameson Irish whiskey and whipped milk</p>-->
+<!--                    <h3>&#36;7.00</h3>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="card">-->
+<!--                <div class="card__photo">-->
+<!--                    <img src="assets/menu/coffee-2.png" alt="coffee preview">-->
+<!--                </div>-->
+<!--                <div class="card__description">-->
+<!--                    <h3>Kahlua coffee</h3>-->
+<!--                    <p>Classic coffee with milk and Kahlua liqueur under a cap of frothed milk</p>-->
+<!--                    <h3>&#36;7.00</h3>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="card">-->
+<!--                <div class="card__photo">-->
+<!--                    <img src="assets/menu/coffee-3.png" alt="coffee preview">-->
+<!--                </div>-->
+<!--                <div class="card__description">-->
+<!--                    <h3>Honey raf</h3>-->
+<!--                    <p>Espresso with frothed milk, cream and aromatic honey</p>-->
+<!--                    <h3>&#36;5.50</h3>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="card">-->
+<!--                <div class="card__photo">-->
+<!--                    <img src="assets/menu/coffee-4.png" alt="coffee preview">-->
+<!--                </div>-->
+<!--                <div class="card__description">-->
+<!--                    <h3>Ice cappuccino</h3>-->
+<!--                    <p>Cappuccino with soft thick foam in summer version with ice</p>-->
+<!--                    <h3>&#36;5.00</h3>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="card">-->
+<!--                <div class="card__photo">-->
+<!--                    <img src="assets/menu/coffee-5.png" alt="coffee preview">-->
+<!--                </div>-->
+<!--                <div class="card__description">-->
+<!--                    <h3>Espresso</h3>-->
+<!--                    <p>Classic black coffee</p>-->
+<!--                    <h3>&#36;4.50</h3>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="card">-->
+<!--                <div class="card__photo">-->
+<!--                    <img src="assets/menu/coffee-6.png" alt="coffee preview">-->
+<!--                </div>-->
+<!--                <div class="card__description">-->
+<!--                    <h3>Latte</h3>-->
+<!--                    <p>Espresso coffee with the addition of steamed milk and dense milk foam</p>-->
+<!--                    <h3>&#36;5.50</h3>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="card">-->
+<!--                <div class="card__photo">-->
+<!--                    <img src="assets/menu/coffee-7.png" alt="coffee preview">-->
+<!--                </div>-->
+<!--                <div class="card__description">-->
+<!--                    <h3>Latte macchiato</h3>-->
+<!--                    <p>Espresso with frothed milk and chocolate</p>-->
+<!--                    <h3>&#36;5.50</h3>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="card">-->
+<!--                <div class="card__photo">-->
+<!--                    <img src="assets/menu/coffee-8.png" alt="coffee preview">-->
+<!--                </div>-->
+<!--                <div class="card__description">-->
+<!--                    <h3>Coffee with cognac</h3>-->
+<!--                    <p>Fragrant black coffee with cognac and whipped cream</p>-->
+<!--                    <h3>&#36;6.50</h3>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
         <div class="menu-circle-button">
             <svg>
