--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -13,11 +13,11 @@
 </head>
 <body class="head-bg">
 <header class="header wrapper">
-    <div class="header__wrapper head-bg">
-        <a class="header__logo head-bg" href="./index.html">
+    <div class="header__wrapper">
+        <a class="header__logo" href="./index.html">
             <img src="assets/logo.svg" alt="logo">
         </a>
-        <nav class="header__navigation head-bg">
+        <nav class="header__navigation">
             <ul class="main-navigation">
                 <li class="main-navigation__link"><a class="link-animation" href="index.html#favourites-coffee">Favorite coffee</a></li>
                 <li class="main-navigation__link"><a class="link-animation" href="index.html#about">About</a></li>
@@ -25,14 +25,30 @@
                 <li class="main-navigation__link"><a class="link-animation" href="#contacts">Contact us</a></li>
             </ul>
         </nav>
-        <div class="header-menu-button head-bg">
+        <div class="header-menu-button">
             <a href="#" class="header-menu-button__link link-hovered">
                 <span>Menu</span>
                 <span><img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup"></span>
             </a>
         </div>
-        <div class="burger-button head-bg">
+        <div class="burger-button">
             <span></span>
+        </div>
+    </div>
+    <div class="burger-wrapper">
+        <nav class="burger__navigation">
+            <ul class="main-navigation">
+                <li class="main-navigation__link"><a class="link-animation" href="index.html#favourites-coffee">Favorite coffee</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="index.html#about">About</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="index.html#mobile-app">Mobile app</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="#contacts">Contact us</a></li>
+            </ul>
+        </nav>
+        <div class="burger-menu-button">
+            <a href="menu.html" class="burger-menu-button__link link-animation">
+                <span>Menu</span>
+                <span><img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup"></span>
+            </a>
         </div>
     </div>
 </header>
