feat: render menu card depending on media

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -45,7 +45,7 @@
             </ul>
         </nav>
         <div class="burger-menu-button">
-            <a href="menu.html" class="burger-menu-button__link link-animation">
+            <a href="#" class="burger-menu-button__link link-animation">
                 <span>Menu</span>
                 <span><img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup"></span>
             </a>
