--- a/hangman/index.html
+++ b/hangman/index.html
@@ -3,8 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <title>Hangman</title>
+  <link rel="stylesheet" href="./sass/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<div class="wrapper">
+  <div class="gallows-container">
+    <svg height="250" width="200" class="gallows">
+      <!-- gallows -->
+      <line x1="60" y1="20" x2="60" y2="200"/>
+      <line x1="60" y1="20" x2="140" y2="20"/>
+      <line x1="140" y1="20" x2="140" y2="50"/>
+      <line x1="60" y1="200" x2="20" y2="200"/>
+      <line x1="60" y1="200" x2="170" y2="200"/>
+      <!-- head -->
+      <circle cx="140" cy="70" r="20" class="hide"/>
+      <!-- body -->
+      <line x1="140" y1="90" x2="140" y2="130" class="hide"/>
+      <!-- left arm -->
+      <line x1="140" y1="100" x2="120" y2="120" class="hide"/>
+      <!-- right arm -->
+      <line x1="140" y1="100" x2="160" y2="120" class="hide"/>
+      <!-- left leg -->
+      <line x1="140" y1="130" x2="130" y2="170" class="hide"/>
+      <!-- right leg -->
+      <line x1="140" y1="130" x2="150" y2="170" class="hide"/>
+    </svg>
+    <h1 class="hangman-title">Hangman Game</h1>
+  </div>
+  <div class="game-container">
+    <ul class="guess-word">
+      <li class="letter">E</li>
+      <li class="letter">e</li>
+      <li class="letter">e</li>
+      <li class="letter">F</li>
+      <li class="letter">e</li>
+    </ul>
+    <p class="hint">Hint: <span>podskazka podskazka podskazka podskazka podskazka podskazka podskazka podskazka</span>
+    </p>
+    <p class="incorrect-guess">Incorrect guesses: <span>0</span><span> / 6</span></p>
+    <div class="keyboard">
+      <div>A</div>
+      <div>B</div>
+      <div>C</div>
+      <div>D</div>
+      <div>E</div>
+      <div>f</div>
+      <div>g</div>
+      <div>h</div>
+      <div>i</div>
+      <div>j</div>
+      <div>k</div>
+      <div>l</div>
+      <div>m</div>
+      <div>n</div>
+      <div>o</div>
+      <div>p</div>
+      <div>q</div>
+      <div>r</div>
+      <div>s</div>
+      <div>t</div>
+      <div>u</div>
+      <div>v</div>
+      <div>w</div>
+      <div>x</div>
+      <div>y</div>
+      <div>z</div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
