feat: add modal window when win or loss

--- a/hangman/index.html
+++ b/hangman/index.html
@@ -9,6 +9,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
+<!--<div class="modal-wrapper">-->
+<!--  <div class="modal">-->
+<!--    <img class="modal__img" src="./assets/sad-tear.png">-->
+<!--    <h2 class="modal__title">Congrats you win!</h2>-->
+<!--    <h3 class="modal__result">guessed word: <span>asdasdasdssasd</span></h3>-->
+<!--    <div class="game-reset">play again</div>-->
+<!--  </div>-->
+<!--</div>-->
+
 <!--<div class="wrapper">-->
 <!--  <div class="gallows-container">-->
 <!--    <svg height="250" width="200" class="gallows">-->
