feat: add new game method and difficult tabs button

--- a/nonograms/src/index.html
+++ b/nonograms/src/index.html
@@ -10,6 +10,31 @@
   <title>Nonograms</title>
 </head>
 <body>
-
+<!--<nav class="difficult">-->
+<!--  <div class="tab">-->
+<!--    <div class="tab-links small">small</div>-->
+<!--    <div class="tab-links medium">medium</div>-->
+<!--    <div class="tab-links large">large</div>-->
+<!--    <div class="tab-links random">random</div>-->
+<!--  </div>-->
+<!--  <div id="small" class="tab-content">-->
+<!--      <div class="tab-links" data-size="5" data-name="name">smile</div>-->
+<!--      <div class="tab-links medium">fish</div>-->
+<!--      <div class="tab-links large">plus</div>-->
+<!--      <div class="tab-links">abstract</div>-->
+<!--  </div>-->
+<!--  <div id="medium" class="tab-content">-->
+<!--    <div class="tab-links small">rrr</div>-->
+<!--    <div class="tab-links medium">rrr</div>-->
+<!--    <div class="tab-links large">plus</div>-->
+<!--    <div class="tab-links">asdasd</div>-->
+<!--  </div>-->
+<!--  <div id="large" class="tab-content">-->
+<!--    <div class="tab-links small">aaaa</div>-->
+<!--    <div class="tab-links medium">aaaa</div>-->
+<!--    <div class="tab-links large">aaaa</div>-->
+<!--    <div class="tab-links">dadadda</div>-->
+<!--  </div>-->
+<!--</nav>-->
 </body>
 </html>
