feat: add modal class and show best scores

--- a/nonograms/src/index.html
+++ b/nonograms/src/index.html
@@ -11,6 +11,28 @@
   <title>Nonograms</title>
 </head>
 <body>
-<!--<div id="timer"></div>-->
+<!--<div class="modal__scores">-->
+<!--  <h3 class="modal__title">Scores</h3>-->
+<!--  <div class="modal__table">-->
+<!--    <div class="modal__table-header">-->
+<!--      <span>№</span>-->
+<!--      <span>Name</span>-->
+<!--      <span>Difficulty</span>-->
+<!--      <span>Time</span>-->
+<!--    </div>-->
+<!--    <div class="modal__table-row">-->
+<!--      <span>1</span>-->
+<!--      <span>Smile</span>-->
+<!--      <span>5x5</span>-->
+<!--      <span>00:22</span>-->
+<!--    </div>-->
+<!--    <div class="modal__table-row">-->
+<!--      <span>2</span>-->
+<!--      <span>Smile2</span>-->
+<!--      <span>15x15</span>-->
+<!--      <span>00:37</span>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 </body>
 </html>
