feat: show victory message

--- a/nonograms/src/index.html
+++ b/nonograms/src/index.html
@@ -11,28 +11,11 @@
   <title>Nonograms</title>
 </head>
 <body>
-<!--<div class="modal__scores">-->
-<!--  <h3 class="modal__title">Scores</h3>-->
-<!--  <div class="modal__table">-->
-<!--    <div class="modal__table-header">-->
-<!--      <span>№</span>-->
-<!--      <span>Name</span>-->
-<!--      <span>Difficulty</span>-->
-<!--      <span>Time</span>-->
-<!--    </div>-->
-<!--    <div class="modal__table-row">-->
-<!--      <span>1</span>-->
-<!--      <span>Smile</span>-->
-<!--      <span>5x5</span>-->
-<!--      <span>00:22</span>-->
-<!--    </div>-->
-<!--    <div class="modal__table-row">-->
-<!--      <span>2</span>-->
-<!--      <span>Smile2</span>-->
-<!--      <span>15x15</span>-->
-<!--      <span>00:37</span>-->
-<!--    </div>-->
-<!--  </div>-->
+<!--<div class="victory-wrapper">-->
+<!--  <h2>Congratulation!</h2>-->
+<!--  <h2>you solved < nonograms</h2>-->
+<!--  <h2>your time: </h2>-->
+<!--  <span></span>-->
 <!--</div>-->
 </body>
 </html>
