feat: add icons in footer

--- a/news-api/src/index.html
+++ b/news-api/src/index.html
@@ -15,9 +15,19 @@
             <div class="news"></div>
         </main>
         <footer>
+            <a href="https://github.com/dewlar" target="_blank" class="github">
+              <object type="image/svg+xml" data="./assets/github_icon.svg" class="obj">
+                Your browser does not support SVG
+              </object>
+            </a>
             <p class="copyright">
                 Copyright <a href="https://newsapi.org">NewsAPI</a>
             </p>
+            <a class="rs-logo" href="https://rs.school/js/" target="_blank">
+              <object type="image/svg+xml" data="./assets/rs_school_js.svg">
+                Your browser does not support SVG
+              </object>
+            </a>
         </footer>
 
         <template id="sourceItemTemp">
