--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Stylish&display=swap" rel="stylesheet">
     <title>Async-race</title>
   </head>
   <body>
